# voxel_builder

./: .gitignore  Cargo.toml  LICENSE  README.md  todo
src/: camera.rs  chunk.rs  chunk_manager.rs  chunk_mesh.rs  default.frag  default.vert  lib.rs  main.rs  voxel_data_manager.rs  window_context.rs  world_generation.rs
v/: describe_square.pdn  minecraft_v_plan.txt
